# openapi/openapi.yaml
@@ -38,6 +38,27 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Task'
+  /tasksforuser/{id}:
+    get:
+      summary: Get tasks for User by ID
+      tags:
+        - users
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+            format: uint
+          required: true
+      responses:
+        '200':
+          description: A list of tasks
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Task'
   /tasks/{id}:
     patch:
       summary: Update task
@@ -161,6 +182,9 @@ components:
           type: string
         is_done:
           type: boolean
+        user_id:
+          type: integer
+          format: uint
     User:
       type: object
       properties:
